[fix] selectPlayer, LineUp Component 간 z-index 설정

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@
   justify-content: center;
   margin-top: 10px;
   position: relative;
+  z-index: 0;
 }
 
 .container::before {
